--- a/04-Clustering.Rmd
+++ b/04-Clustering.Rmd
@@ -32,7 +32,7 @@ key tasks to complete:
 - genes in the tails
 -->
 
-The previous chapter investigated regions of the genome in Polynesian populations that displayed 'signatures of selection', this chapter investigates the hypothesis that populations with shared ancestry will display similar signals of selection. To test this, I will be clustering the various selection statistics and then comparing the clusters to current population migratory history. This chapter contains data that could be thought of as a precursor to chapter \@ref{selectionResults}, however it incorporates the results from that chapter \@ref{selectionResults} and so has been presented after.
+The previous chapter investigated regions of the genome in Polynesian populations that displayed 'signatures of selection', this chapter investigates the hypothesis that populations with shared ancestry will display similar signals of selection. To test this, I will be clustering the various selection statistics and then comparing the clusters to current population migratory history. This chapter contains data that could be thought of as a precursor to chapter \@ref(selectionResults), however it incorporates the results from that chapter \@ref(selectionResults) and so has been presented after.
 
 ## Introduction {#chap4Intro}
 
@@ -2304,10 +2304,6 @@ this is not necessarily the case, due to the way things were annotated
 
 The "Out of Africa" model of human migration can be useful in explaining differences between modern populations and potential time points when these differences may have arisen. Under a neutral model the differences in allele frequency between populations are due to genetic drift [@kimura1979neutral]. Demographic events such as bottleneck, migration, expansion, and admixture also contribute to the differences in allele frequencies found between populations [@Wright1951]. Conversely, selection acts in a targeted manner, therefore if the selection occurred post population split then it would be expected to look neutral in one population but not in the other. However, if the selective event happened in an ancestral population of the two then, dependent on time since divergence, it would be expected to be observed in both populations [@Hermisson2017]. It is also possible to have 'parallel' selection, where both populations experience independent selection [@Tennessen2011]. Using a coalescent approach to identify the common intermediate ancestral populations, if for example, a genomic region identified as under selection in the Polynesian populations was also found in the East Asian populations, but not the Europeans, it could be inferred that the selective pressure was likely after the migration from Europe to East Asia. In looking at modern disease, a potential approach to understanding the differences in disease burden between modern populations is to look at the genetic differences between populations with shared ancestry.
 
-<!-- >Tony: doesn't make sense -> -->
-
-<!-- >In the context of modern metabolic disease, the question being asked is, is there evidence in the ancestral populations of selection in metabolic disease associated loci that is in common with the Polynesian populations? -->
-
 The current metabolic disease burden in the Polynesian populations is higher than other populations [@Winnard2012; @Winnard2013]. This higher disease burden could possibly have arisen due to environmental changes and selective pressure on Polynesian populations after the migration into the Pacific. As found in Chapter 3, however, there was limited evidence for selection, especially in the overlap between haplotypic and \gls{sfs}-based methodologies, in the genes that were associated with urate and associated metabolic diseases (Table \@ref(tab:superDiseaseGenesTab)). Three approaches were taken to investigate the potential of a 'shared selective' history of the loci associated with urate and metabolic disease. These were: investigating the loci that were in either the 1^st^ or 99^th^ percentile, investigating the loci that were in the clustered regions for the significant \glspl{snp} of the haplotypic statistics, use of \gls{ihs} and \gls{nsl}, and finally, hierarchical clustering of the median-centred values for windows that intersected the loci associated with urate and metabolic disease.
 
 For the \gls{sfs}-based statistics, many of the windows in either the 1^st^ or 99^th^ percentile for the \gls{pol} populations that intersected the genes associated with metabolic disease were not in common with other populations. The windows that were in common, were usually with the \gls{eas} populations. This is consistent with the migratory history of the Pacific and the shared ancestry the Polynesian populations have with East Asia.
@@ -2393,7 +2389,7 @@ ze_neg_pol_genes %>% filter(SYMBOL %in% genelists$genename) %>% select(contains(
 
 <!-- > Detection of selection on polygenic traits... -->
 
-The technical limitations of this dataset based on the markers from the CoreExome \gls{snp} array raised in Section \@ref(chap3limit) also apply to this analysis. Particular to the analysis in this chapter is how the clusters were determined. The \texttt{cutree} method implemented in R [@RCoreTeam2017] that was used to slice the dendrograms, creating the groups used to assess the proportions and exclusivity of the clustering was relatively crude and did not always agree with the clusters that were 'visually apparent' in the dendrogram, although 'visually apparent' could be partially attributed to confirmation bias. Hierarchical clustering was chosen as the clustering algorithm over K-means because the branching nature could be thought of as a metaphor for the population migration histories. It is also possible that different linkage and distance criteria for the clustering algorithm may have produced different clusters, however, \hl{a brief investigation of this using XXX indicated that any differences in clusters would likely be minor (data not shown).}
+The technical limitations of this dataset based on the markers from the CoreExome \gls{snp} array raised in Section \@ref(chap3limit) also apply to this analysis. Particular to the analysis in this chapter is how the clusters were determined. The \texttt{cutree} method implemented in R [@RCoreTeam2017] that was used to slice the dendrograms, creating the groups used to assess the proportions and exclusivity of the clustering was relatively crude and did not always agree with the clusters that were 'visually apparent' in the dendrogram, although 'visually apparent' could be partially attributed to confirmation bias. Hierarchical clustering was chosen as the clustering algorithm over K-means because the branching nature could be thought of as a metaphor for the population migration histories. It is also possible that different linkage and distance criteria for the clustering algorithm may have produced different clusters. However, a brief investigation of this, using each of the distance and linkage measures implemented by the \texttt{hclust} method in R indicated that any differences in clusters would likely be minor (data not shown).
 
 <!-- give this a test and might then might be able to "data not shown" -->
 
@@ -2405,7 +2401,7 @@ The only statistic that consistently did not cluster the Polynesian populations 
 
 As reported in section \@ref(fdrresults), only the \gls{fdr} for the Polynesian populations was below 10% for the 1^st^ percentiles of \gls{td} and \gls{fwh} for the frequency spectrum-based statistics. This means that while the extremes would be considered the most likely ends of the distribution that would contain regions of the genome that had been selected, this cannot be claimed with confidence. Therefore the mechanism through which they became the extremes of the distribution is possibly through selection, however, other neutrality mechanisms are still valid. While it is true that the extremes may include selected loci, it is also true that because of the use of a distribution proportion threshold, there will always be windows or \glspl{snp} that would be identified as possibly being under selection [@Teshima2006]. This means that while there were similarities in the extremes of the distributions for the frequency-based statistics, they are not necessarily under selection, and based on the \gls{fdr} calculated from the permutations, they are likely to be false positives.
 
-Another limitation was a lack of 'internal replication', for example, the Eastern and Western Polynesian pairs, where a region would only meet the threshold for significance in a single population and not in the paired population. This could also just be a side effect of discretising a continuous distribution, and especially for values sitting close to the threshold it is easy to imagine a situation where in one population it was significant and the other it was not. An alternative approach could have been to rank all of the windows based on statistic value and determine differences and similarities in rank order between populations. \hl{XXX consequence of doing this}
+Another limitation was a lack of 'internal replication', for example, the Eastern and Western Polynesian pairs, where a region would only meet the threshold for significance in a single population and not in the paired population. This could also just be a side effect of discretising a continuous distribution, and especially for values sitting close to the threshold it is easy to imagine a situation where in one population it was significant and the other it was not. An alternative approach could have been to rank all of the windows based on statistic value and determine differences and similarities in rank order between populations.
 
 The rightwards shift in the distributions of \gls{td}, \gls{flf}, and \gls{ze} largely is influenced by the low frequency variants and singletons being under-represented. This effect is due to the ascertainment bias on the \gls{snp} arrays, where there is an excess of common alleles, when compared with sequence data [@Ramirez-Soriano2009]. This shift was more noticeable in the \gls{afr} populations with the 1^st^ percentile being above zero for \gls{td} and \gls{flf}. This meant that the windows that were being compared were not always the going to be inferring the same type of selection or population demographic events as those that were from below zero. The rightward shift won't have affected all genes in a uniform manner - the impact will be different for different genes, based on the frequency of the markers they contain. This means that it can't be assumed that the genes in the 1^st^ percentile for the \gls{afr} populations are the equivalent in terms of ranking by statistic value, to those in the other populations. Nor can it be assumed that the distribution that was observed using the markers from the CoreExome would be the same that would be observed from using sequencing data.
 
