extra content for the malaria explanations

--- a/03-SelectionPipeline.Rmd
+++ b/03-SelectionPipeline.Rmd
@@ -3017,7 +3017,7 @@ sig_ihs_val %>% filter(genename %in% malaria_GR$SYMBOL) %>% select(-gene_chrom, 
 
 Urate has a central role in malarial infection and triggering an immune response [@GallegoDelgado2014]. Given that immune response is a strong candidate to be under selective pressure, malaria associated genes were looked at to see if there were signals of selection. From the GWAS catalog there were two genes that had been associated with malaria at a genome-wide significance threshold (of three, see Table \@ref(tab:gwascatref) for references), that also had evidence of selection with the Polynesian populations. The two genes that also had significant \gls{ihs} scores with Polynesian populations were _ABO_ and _ATP2B4_. 
 
-_ABO_ was the only gene that had significant markers in all four Polynesian populations out of the malaria-associated genes, and this was only for \gls{ihs}. All of the markers with significant \gls{ihs} in _ABO_ were in favour of the derived allele haplotype. \Gls{cim} had two markers that were significant, the first, rs1053878, was also significant in \gls{ton}. The second marker, rs55764262, was significant in \gls{cim}, \gls{nzm}, and \gls{sam}, and was not in \gls{ld} (\gls{eas} R^2^ = 0.003) with rs549446. Rs549446 was significant in both \gls{chs} and \gls{jpt}. There were no windows from the frequency-based statistics that met the significance threshold. _ABO_ has also been associated with obesity in \gls{gwas} [@comuzzie2012novel]. The marker rs8176741 had been associated with severe malaria [@Timmann2012], however, this marker had a significant \gls{ihs} in \gls{fin} but no other populations. The other \glspl{snp} that showed significance for \gls{ihs} were not in \gls{ld} (\gls{eas} R^2^ = 0.002) with rs55764262, for which \gls{cim}, \gls{nzm} and \gls{sam} all had a significant result. Both \gls{cim} and \gls{ton} had a different marker (rs1053878) that was significant for \gls{ihs} in _ABO_.
+_ABO_ was the only gene that had significant markers in all four Polynesian populations out of the malaria-associated genes, and this was only for \gls{ihs}. All of the markers with significant \gls{ihs} in _ABO_ were in favour of the derived allele haplotype. \Gls{cim} had two markers that were significant, the first, rs1053878, was also significant in \gls{ton}. The second marker, rs55764262, was significant in \gls{cim}, \gls{nzm}, and \gls{sam}, and was not in \gls{ld} with rs549446 (\gls{eas} R^2^ = 0.003). Rs549446 was significant in both \gls{chs} and \gls{jpt}. There were no windows from the frequency-based statistics that met the significance threshold. _ABO_ has also been associated with obesity in \gls{gwas} [@comuzzie2012novel]. The marker rs8176741 had been associated with severe malaria [@Timmann2012], however, this marker had a significant \gls{ihs} in \gls{fin} but no other populations. The other \glspl{snp} that showed significance for \gls{ihs} were not in \gls{ld} (\gls{eas} R^2^ = 0.002) with rs55764262, for which \gls{cim}, \gls{nzm} and \gls{sam} all had a significant result. Both \gls{cim} and \gls{ton} had a different marker (rs1053878) that was significant for \gls{ihs} in _ABO_.
 
 
 Both \gls{sam} and \gls{nzm} had \glspl{snp} that were significant for \gls{ihs} in _ATP2B4_, \gls{sam} had rs10494845, and \gls{nzm} had rs142206068, both were in favour of the derived allele haplotype. The malaria-associated variant was rs10900585 [@Timmann2012]. All three variants were not in \gls{ld} with each other (\gls{eas} R^2^ = 0.00). The\gls{ld} was calculated using the full \gls{1kgp} marker list for \gls{eas} beacause rs10900585 was not on the CoreExome \gls{snp} array. 
@@ -3164,21 +3164,19 @@ Other complex diseases in which urate is implicated, such as the neurological, a
 <!-- SH2B3-ATXN2 has snps associated with urate, and other diseases (rs3184504, rs4766578, rs653178, and rs11065987) are in close LD. derived allele haplotype was associated with increased risk of autoimmune, bp, and urate. haplotype was common in European but not in afr or asi. possible recent sweep due to bacterial infection @Zhernakova2010. The locus also extends to ALDH2 which @Oota2004 suggests is under selection -->
 
 
-### Thrifty gene hypothesis
+### Replication of candidate thrifty-genes
 
 There was no evidence of selection in either of the previously identified loci of _PPARGC1A_ and _CREBRF_ in Polynesian populations. The CoreExome \gls{snp} array did not have rs8192678 which was the \gls{snp} reported in @Myles2011 (and not replicated in @Cadzow2016) as being a thrifty genotype, but it did have rs1873532 which was in high \gls{ld} (\gls{eas} R^2^ = 0.976). The lack of evidence was consistent with the results of @Cadzow2016 for _PPARGC1A_ where there was no indication of selection from frequency- or haplotype-based methods. 
 
 No selection signal was observed at _CREBRF_ in any of the Polynesian populations that were tested. One reason for this is that the CoreExome \gls{snp} array did not have the specific variants (rs12513649 and rs373863828) reported in @Minster2016. Downstream from _CREBRF_ there was a consistent signal with what had been reported. This was only found in the Western Polynesian populations and the populations of the \gls{eas} super population, so suggests that had the dataset contained the variants then detection would have been possible. However, without the two markers reported in @Minster2016 it was unable to be determined if _CREBRF_ had evidence of selection from the CoreExome data.
 
-The pathway analysis of genes that were in the extremes for the different selection and neutrality statistics showed that pathways involved with cell signalling were the main results for the Polynesian populations, rather than metabolic pathways. The genes that indicated selection, even for obesity and \gls{t2d}, which are traditionally thought of as being the thrifty phenotype, were genes that were largely either neurological or involved in the immune system.
+The pathway analysis of genes that were in the extremes for the different selection and neutrality statistics showed that pathways involved with cell signalling were the main results for the Polynesian populations, rather than metabolic pathways. The genes that indicated possible selection, even for obesity and \gls{t2d}, which are traditionally thought of as being the thrifty phenotype, were genes that were largely either neurological or involved in the immune system. \gls{nzm} did have significant results for two diabetes related pathways, "Type II diabetes mellitus_Homo sapiens_hsa04930" and "Insulin secretion_Homo sapiens_hsa04911", however, only up to 10% of the pathways had genes that met the significance thresholds. Of the genes that were part of those pathways, up to 50% were genes that encoded subunits of voltage-gated calcium channels. While some \gls{t2d}-associated individual loci show some signs of selection, it appears as if widespread selection is not the case. @Ayub2014c had a similar finding with respect to \gls{t2d}, where there was no support for the thrifty-gene hypothesis, testing across 65 \gls{t2d}-associated loci. 
 
-\gls{nzm} did have significant results for two diabetes related pathways, "Type II diabetes mellitus_Homo sapiens_hsa04930" and "Insulin secretion_Homo sapiens_hsa04911", however, only up to 10% of the pathways had genes that met the significance thresholds. Of the genes that were part of those pathways, up to 50% were genes that encoded subunits of voltage-gated calcium channels. 
+As discussed in @Gosling2014, the thrifty-gene hypothesis in the context of the Pacific, where starvation during long voyages selected for thrifty-genes, does not fit with the anthropological history of Polynesian people, where they undertook planned voyages with settled the Pacific in a speedy manner. From the analysis results in this chapter, the thrifty-gene hypothesis appears to have none-to-minimal support from the loci that exhibit signals of possible selection. 
 
-As discussed in @Gosling2014, the thrifty gene hypothesis in the context of the Pacific does not fit with the anthropological history, and from this analysis it appears to have none-to-minimal support from the loci that exhibit signals of possible selection. 
 
-\hl{XXX expand}
 
-@Ayub2014c had a similar finding with respect to \gls{t2d}. While some individual loci show some signs of selection, it appears as if widespread selection at \gls{t2d} loci is not the case.
+
 
 <!-- ihs = 2.94 -->
 
@@ -3191,12 +3189,16 @@ As discussed in @Gosling2014, the thrifty gene hypothesis in the context of the 
 
 <!-- LEPR - ihs rs12042877 in TON. only other populations were AFR and EAS -->
 
-### Malaria
+### Selection in Malaria associated loci in Polynesian populations
 
 
 Malaria is endemic in the southwest pacific, extending out to the east as far as Vanuatu, but is absent further west in Polynesia [@Clark1993]. There is evidence of genetic advantage against malaria of Austronesian speaking populations in Near Oceania, through which the Polynesian ancestors would have passed through prior to settlement of the Pacfic [@Clark1993;]. In Remote Oceania, where malaria is absent, high frequencies of  $\alpha$-thalassaemia mutations (protective against malaria) have been identified in populations not exposed to malaria [@Hill1985]. Other malaria protective mutations, such as glucose-6-phosphate dehydrogenase deficiency and $\beta$-thalassaemia, are present in Pacific populations in higher frequencies [@Cappellini2008;@Flint1986].
 
-Response to infectious challenge is a key mechanism that has been thought of as a selective pressure. Malarial infection provided a possible challenge to which urate may have been subjected to selective pressure, and as such provided a viable candidate due to the involvement of urate with malarial resistance [@GallegoDelgado2014]. Three loci that were associated with malaria and identified from the \gls{gwas} catalog were investigated for having signals of selection. Two genes that had evidence of selection in the Polynesian populations had also been identified as being associated with obesity and \gls{t2d}. _ABO_ and _ATP2B4_ did not have strong evidence, and it came from only \gls{ihs}. With the blood antigen ABO, there is higher susceptibility to malaria in the A, B, or AB antigen groups, than O [@Zerihun2011]. This has led to the formulation of a potential mechanism of cytoadherence through infected red blood cells expressing PfEMP-1 and binding to the A or B antigens on other red blood cells, enabling further infection [@Cserti2015]. _ATP2B4_ encodes a plasma membrane calcium transporter, another calcium related gene with evidence of selection in \gls{nzm}, also sharing similarity with the many of the genes in the pathways from the pathway enrichment, in that they too were calcium channels. _DDC_ on the other hand, which had a nominally genome-wide significant association with malaria, had comparatively strong haplotypic evidence in the Eastern Polynesian populations. \Gls{nzm} had significant \gls{xpehh} results with every other non-Polynesian population and had six significant markers for \gls{ihs}, three of which were in the top 400 most extreme scores. Rs1966839 in _DDC_ was in near perfect \gls{ld} with the malaria associated intronic variant rs1451375 [@jallow2009genome] and the protective allele corresponded with the allele displaying a possible signal of selection.
+Response to infectious challenge is a key mechanism that has been thought of as a selective pressure. Malarial infection provided a possible challenge to which urate may have been subjected to selective pressure, and as such provided a viable candidate due to the involvement of urate with malarial resistance [@GallegoDelgado2014]. Three loci that were associated with malaria and identified from the \gls{gwas} catalog were investigated for having signals of selection. Two genes that had evidence of selection in the Polynesian populations had also been identified as being associated with obesity and \gls{t2d}. _ABO_ and _ATP2B4_ did not have strong evidence, and it came from only \gls{ihs}. 
+
+The blood antigen ABO has a higher susceptibility to malaria in the A, B, or AB antigen groups, than O [@Zerihun2011]. This has led to the formulation of a potential mechanism of cytoadherence through infected red blood cells expressing PfEMP-1 and binding to the A or B antigens on other red blood cells, enabling further infection [@Cserti2015]. There is an increasing gradiant of A-type antigen from west to east in the Pacific, with populations in Melanesia having some of the lowest frequencies and within Polynesia, Western Polynesian populations have lower frequencies than Eastern Polynesian populations [@Simmons1962]. This could suggest that areas with endemic malaria have a maintained selective pressure against the A-type antigen.
+
+_ATP2B4_ encodes a plasma membrane calcium transporter, another calcium related gene with evidence of selection in \gls{nzm}, also sharing similarity with the many of the genes in the pathways from the pathway enrichment, in that they too were calcium channels. _DDC_ on the other hand, which had a nominally genome-wide significant association with malaria, had comparatively strong haplotypic evidence in the Eastern Polynesian populations. \Gls{nzm} had significant \gls{xpehh} results with every other non-Polynesian population and had six significant markers for \gls{ihs}, three of which were in the top 400 most extreme scores. Rs1966839 in _DDC_ was in near perfect \gls{ld} with the malaria associated intronic variant rs1451375 [@jallow2009genome] and the protective allele corresponded with the allele displaying a possible signal of selection.
 
 
 From the obesity \gls{gwas} associated gene list, there was _ADCY9_, which had a very strong signal for \gls{ihs} for 7 markers in \gls{cim} and 2 markers in \gls{nzm}, that were the only populations with significant \gls{ihs} values. The variant rs10775349 in _ADCY9_ had been associated with malaria in a candidate gene approach but not in \gls{gwas} [@Maiga2013].
@@ -3223,8 +3225,6 @@ There was also a higher likelihood of a longer gene being reported as significan
 
 The method itself of using the empirical distribution and selecting the extremes for a statistic to determine the region under selection does have precedence [@voight2006map; @Hider2013; @Jonnalagadda2017], however, this does assume that selection had occurred. The underlying null distribution of the genome is also unknown. It does need to be acknowledged that using the extremes of the distribution is likely to lead to many false positives [@Teshima2006]. This was somewhat mitigated in this study by using the permutations of the actual data to calculate the empirical \gls{fdr}. Having internal replication within super populations also helps to reduce the \gls{fdr}, for the Polynesian populations this consisted of the Eastern and Western Polynesia population pairings.
 
-<!--XXX how does it reduce the fdr -->
-
 Allele frequency methods, and also the haplotypic methods, may get confounded by the gout prevalences of the Polynesian sample sets, especially the \gls{cim} and \gls{ton} sets, where the prevalence of gout was up to five-fold higher than the general population prevalence for those populations. Loci that showed evidence in multiple populations that did not have this enrichment for the disease trait would be expected to have more credibility. This is important to consider for the co-morbidities of gout too, given the commonalities in associated genes.
 
 One of the limitations of using the \gls{gwas} catalog to create gene lists for conditions is that there is a heavy over representation of genes that are associated to disease in Europeans due to the overall bias to \gls{gwas} research being conducted in European populations [@Haga2010; @Popejoy2016]. This can mean that population-specific associations are missed [@Weissglas-Volkov2013; @Minster2016]. Genes that are associated with a condition can also be missed if they do not reach genome-wide significance in a \gls{gwas} but in a candidate gene approach are significant for instance _ADCY9_ being nominally significant for \gls{bmi} at a genome-wide level but only significant for malaria in a candidate gene approach. 
@@ -3240,9 +3240,9 @@ One of the limitations of using the \gls{gwas} catalog to create gene lists for 
 
 ### Conclusion
 
-The results of this study show there is indeed evidence indicative of selection in urate-associated loci in the Polynesian populations. This evidence however is not specific to urate. This is shown by the fact that there is little signal of selection appearing at the urate transporters themselves, but at the loci that are part of more general pathways. The reasons for why there would be selection still remain unclear but response to pathogenic challenge such as malaria is a potential mechanism.
+The results of this study show there is indeed evidence indicative of selection in urate-associated loci in the Polynesian populations. This evidence however is not specific to urate. This is shown by the fact that there is little signal of selection appearing at the urate transporters themselves, but at the loci that are part of more general pathways. The pathways that were enriched by genes that displayed signatures of selection in Polyesian populations from the genome-wide analysis were dominated by metabolic pathways. Calcium transport and signalling was a central theme for the genes that showed evidence of possible positive selection in Polynesian populations. The reasons for why there would be selection still remain unclear but response to pathogenic challenge such as malaria is a potential mechanism.
 
-\hl{XXX expand with some of the important results - what is the take home message from this work?}
+
 
 <!-- #### possibly useful papers -->
 
